--- a/views/layout.html
+++ b/views/layout.html
@@ -219,7 +219,9 @@
       </ul>
     </div>
   </nav>
-  <div id="main" role="main">
+  <div class="content-wrapper">
+    <div class="container-fluid">
+      <div id="main" role="main">
 
       <!-- MAIN CONTENT -->
       <div id="content">
@@ -237,10 +239,9 @@
             the <section></section> and you can use wells or panels instead
             -->
 
-
-
       </div>
       <!-- END MAIN CONTENT -->
+    </div>
     </div>
     <!-- /.container-fluid-->
     <!-- /.content-wrapper-->
