--- a/views/layout.html
+++ b/views/layout.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>SB Admin - Start Bootstrap Template</title>
+  <title>Contabilidad RTM Sonsón</title>
   <!-- Bootstrap core CSS-->
   <link href="{{=URL('static','startadmin/vendor/bootstrap/css/bootstrap.min.css')}}" rel="stylesheet">
   <!-- Custom fonts for this template-->
@@ -28,39 +28,31 @@
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Dashboard">
           <a class="nav-link" href="index.html">
             <i class="fa fa-fw fa-dashboard"></i>
-            <span class="nav-link-text">Dashboard</span>
+            <span class="nav-link-text">Gastos</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Charts">
           <a class="nav-link" href="charts.html">
             <i class="fa fa-fw fa-area-chart"></i>
-            <span class="nav-link-text">Charts</span>
+            <span class="nav-link-text">Nómina</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Tables">
           <a class="nav-link" href="tables.html">
             <i class="fa fa-fw fa-table"></i>
-            <span class="nav-link-text">Tables</span>
+            <span class="nav-link-text">Facturación</span>
           </a>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Components">
           <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseComponents" data-parent="#exampleAccordion">
             <i class="fa fa-fw fa-wrench"></i>
-            <span class="nav-link-text">Components</span>
+            <span class="nav-link-text">Servicios</span>
           </a>
-          <ul class="sidenav-second-level collapse" id="collapseComponents">
-            <li>
-              <a href="navbar.html">Navbar</a>
-            </li>
-            <li>
-              <a href="cards.html">Cards</a>
-            </li>
-          </ul>
         </li>
         <li class="nav-item" data-toggle="tooltip" data-placement="right" title="Example Pages">
           <a class="nav-link nav-link-collapse collapsed" data-toggle="collapse" href="#collapseExamplePages" data-parent="#exampleAccordion">
             <i class="fa fa-fw fa-file"></i>
-            <span class="nav-link-text">Example Pages</span>
+            <span class="nav-link-text">Inventario</span>
           </a>
           <ul class="sidenav-second-level collapse" id="collapseExamplePages">
             <li>
@@ -221,10 +213,6 @@
   </nav>
   <div class="content-wrapper">
     <div class="container-fluid">
-      <div id="main" role="main">
-
-      <!-- MAIN CONTENT -->
-      <div id="content">
               <!-- row
         <div class="row">
           <div class="col-xs-12 col-sm-7 col-md-7 col-lg-4">
@@ -232,16 +220,12 @@
           </div>
         </div>
          end row -->
-
+         {{include}}
         <!--
             The ID "widget-grid" will start to initialize all widgets below
             You do not need to use widgets if you dont want to. Simply remove
             the <section></section> and you can use wells or panels instead
             -->
-
-      </div>
-      <!-- END MAIN CONTENT -->
-    </div>
     </div>
     <!-- /.container-fluid-->
     <!-- /.content-wrapper-->
@@ -274,24 +258,16 @@
         </div>
       </div>
     </div>
-    <!-- Bootstrap core JavaScript-->
+   
+  </div>
+</body>
+ <!-- Bootstrap core JavaScript-->
     <script src="{{=URL('static','startadmin/vendor/jquery/jquery.min.js')}}"></script>
     <script src="{{=URL('static','startadmin/vendor/bootstrap/js/bootstrap.bundle.min.js')}}"></script>
     <!-- Core plugin JavaScript-->
     <script src="{{=URL('static','startadmin/vendor/jquery-easing/jquery.easing.min.js')}}"></script>
     <!-- Custom scripts for all pages-->
     <script src="{{=URL('static','startadmin/js/sb-admin.min.js')}}"></script>
-    <script type="text/javascript">
-
-        $(document).ready(function() {
-
-          pageSetUp();
-          activeLink();
-
-      });
-
-    </script>
-  </div>
-</body>
-
+    <script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
 </html>
