--- a/views/layout.html
+++ b/views/layout.html
@@ -51,7 +51,7 @@
               <a href="{{=URL('default', 'data/select/gasto')}}">Ver gastos</a>
             </li>
             <li>
-              <a href="{{=URL('default', 'data/create/proveedor')}}">Crear proveedor</a>
+              <a href="{{=URL('proveedor', 'crear')}}">Crear proveedor</a>
             </li>
             <li>
               <a href="{{=URL('default', 'data/select/proveedor')}}">Lista proveedores</a>
