--- a/views/layout.html
+++ b/views/layout.html
@@ -48,7 +48,7 @@
               <a href="{{=URL('gasto', 'crear')}}">Crear gasto</a>
             </li>
             <li>
-              <a href="{{=URL('default', 'data/select/gasto')}}">Ver gastos</a>
+              <a href="{{=URL('gasto', 'ver')}}">Ver gastos</a>
             </li>
             <li>
               <a href="{{=URL('default', 'data/create/proveedor')}}">Crear proveedor</a>
