lista de proveedores

--- a/views/gasto/crear.html
+++ b/views/gasto/crear.html
@@ -32,6 +32,14 @@
                </select>
             </td>
          </tr>
+
+         <tr class="w2p_even even" id="gasto_descripcion__row1">
+            <td class="w2p_fl"><label class="" for="gasto_descripcion" id="gasto_descripcion__label">Descripcion: </label></td>
+            <td class="w2p_fc"></td>
+         </tr>
+          <tr class="w2p_even odd" id="gasto_descripcion__row2">
+            <td class="w2p_fw" colspan="2"><input class="double" id="gasto_descripcion" name="descripcion" type="text" value=""></td>
+         </tr>
  
          <tr class="w2p_even even" id="gasto_monto_iva__row1">
             <td class="w2p_fl"><label class="" for="gasto_monto_iva" id="gasto_monto_iva__label">Monto Iva: </label></td>
