--- a/views/layout.html
+++ b/views/layout.html
@@ -54,7 +54,7 @@
               <a href="{{=URL('proveedor', 'crear')}}">Crear proveedor</a>
             </li>
             <li>
-              <a href="{{=URL('default', 'data/select/proveedor')}}">Lista proveedores</a>
+              <a href="{{=URL('proveedor', 'ver')}}">Lista proveedores</a>
             </li>
           </ul>
         </li>
