agregar iva y revisar gastos

--- a/views/gasto/crear.html
+++ b/views/gasto/crear.html
@@ -90,5 +90,5 @@
 <script src="{{=URL('static','js/gastos/crear.js')}}"></script>
 <script type="text/javascript">
 	var urlOpcionesGastos = "{{=URL('general', 'opciones_gastos')}}"
-	var url_agregar_gasto = "{{=URL('gasto', 'guardar_gasto')}}"
+	var urlAgregarGasto = "{{=URL('gasto', 'guardar_gasto')}}"
 </script>
