--- a/views/gasto/ver.html
+++ b/views/gasto/ver.html
@@ -17,6 +17,7 @@
    </table>
 </div>
 <script src="{{=URL('static','js/gastos/ver.js')}}"></script>
+<script src="{{=URL('static','js/accounting.min.js')}}"></script>
 <script type="text/javascript">
 	var urlListaGastos = "{{=URL('gasto', 'lista_gasto')}}"
 </script>
