--- a/views/layout.html
+++ b/views/layout.html
@@ -25,8 +25,7 @@
   <!-- Custom scripts for all pages-->
   <script type="text/javascript" src="{{=URL('static','startadmin/js/sb-admin.min.js')}}"></script>
   <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
-  <!-- creaciones -->
-  <script type="text/javascript" src="{{=URL('static','js/aviso.js')}}"></script>
+  <script src="{{=URL('static','js/notify.min.js')}}"></script>
 </head>
 
 <body class="fixed-nav sticky-footer bg-dark" id="page-top">
